# taskorc

./: .gitignore  CLAUDE.md  LICENSE  README.md
.claude/: settings.json
.claude/skills/orc-attach/: SKILL.md
.docs/: CLI Commands.md  Concept.md  Entities.md  Skills.md
.taskorc/tasks/: 001-scaffold.md  002-orm-models.md  003-migrations.md  004-auth.md  005-schemas.md  006-routers.md  007-auth-guards.md  008-testing.md  009-hardening.md  1-scaffold.md  2-orm-models.md  3-migrations.md  4-auth.md  5-schemas.md  6-routers.md  7-auth-guards.md  8-testing.md  9-hardening.md
api/: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: eec414406f2f_initial_schema.py
api/app/core/: auth.py  config.py
api/app/models/: __init__.py  artifact.py  base.py  log.py  note.py  project.py  task.py  user.py
api/app/routers/: artifact.py  auth.py  log.py  note.py  project.py  task.py  user.py
api/app/schemas/: __init__.py  artifact.py  base.py  log.py  note.py  project.py  task.py  user.py
api/app/services/: artifact.py  log.py  note.py  ownership.py  project.py  task.py  user.py
api/tests/: conftest.py  test_auth.py  test_auth_utils.py  test_authz.py  test_business_logic.py  test_crud.py
cli/: README.md  package-lock.json  package.json
plugin/: README.md
plugin/.claude-plugin/: plugin.json
tasks/: phase-1-scaffold.md  phase-2-orm-models.md  phase-3-migrations.md  phase-4-auth.md  phase-5-schemas.md  phase-6-routers.md  phase-7-auth-guards.md  phase-8-testing.md  phase-9-hardening.md
(+17 files in other folders)
